[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
clap = "2"
num = "0.4"
rand = "0.8.5"
regex = "1"
piston_window = "0.117"
piston2d-graphics = "0.39"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"